feat: add test api for not use json tag
